// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarketsPercentList AssetRow should render correctly 1`] = `
<Component
  cap={
    Object {
      "BTC": 56.6,
    }
  }
  data={
    Object {
      "ADA": 11.609008590666358,
      "BCH": 0.007558669061380139,
      "BTC": 0.00750053228379006,
      "DASH": 0.0034625156131839,
      "EOS": 0.2208225112777211,
      "ETC": 0.04403520558230914,
      "ETH": 0.04307733540298107,
      "HSR": 0.01925753932664638,
      "LSK": 0.051347106439531234,
      "LTC": 0.024265747042433658,
      "MIOTA": 1.2532610657778096,
      "NEO": 0.02912821789038175,
    }
  }
  index={0}
  money={250}
  prices={
    Array [
      Object {
        "BTC": 7700,
      },
      Object {
        "ETH": 330,
      },
      Object {
        "ETC": 66,
      },
    ]
  }
>
  <div
    className="markets-percent-list-row"
  >
    <div
      className="markets-percent-list-row-symbol"
    >
      BTC
       - 
      56.6
      %
    </div>
    <div
      className="markets-percent-list-coin-value"
    >
      0.00750053
    </div>
    <div
      className="markets-percent-list-row-value"
    >
      $0.00
    </div>
  </div>
</Component>
`;

exports[`MarketsPercentList should render correctly 1`] = `
<Component
  data={
    Object {
      "ADA": 11.609008590666358,
      "BCH": 0.007558669061380139,
      "BTC": 0.00750053228379006,
      "DASH": 0.0034625156131839,
      "EOS": 0.2208225112777211,
      "ETC": 0.04403520558230914,
      "ETH": 0.04307733540298107,
      "HSR": 0.01925753932664638,
      "LSK": 0.051347106439531234,
      "LTC": 0.024265747042433658,
      "MIOTA": 1.2532610657778096,
      "NEO": 0.02912821789038175,
    }
  }
  markets={
    Array [
      Object {
        "BTC": 56.6,
      },
      Object {
        "ETH": 20,
      },
      Object {
        "ETC": 12.12,
      },
    ]
  }
  money={250}
  prices={
    Array [
      Object {
        "BTC": 7700,
      },
      Object {
        "ETH": 330,
      },
      Object {
        "ETC": 66,
      },
    ]
  }
>
  <div
    className="markets-percent-list"
  >
    <div
      className="markets-percent-list-inner"
    >
      <Component
        cap={
          Object {
            "BTC": 56.6,
          }
        }
        data={
          Object {
            "ADA": 11.609008590666358,
            "BCH": 0.007558669061380139,
            "BTC": 0.00750053228379006,
            "DASH": 0.0034625156131839,
            "EOS": 0.2208225112777211,
            "ETC": 0.04403520558230914,
            "ETH": 0.04307733540298107,
            "HSR": 0.01925753932664638,
            "LSK": 0.051347106439531234,
            "LTC": 0.024265747042433658,
            "MIOTA": 1.2532610657778096,
            "NEO": 0.02912821789038175,
          }
        }
        key="0"
        prices={
          Array [
            Object {
              "BTC": 7700,
            },
            Object {
              "ETH": 330,
            },
            Object {
              "ETC": 66,
            },
          ]
        }
      >
        <div
          className="markets-percent-list-row"
        >
          <div
            className="markets-percent-list-row-symbol"
          >
            BTC
             - 
            56.6
            %
          </div>
          <div
            className="markets-percent-list-coin-value"
          >
            0.00750053
          </div>
          <div
            className="markets-percent-list-row-value"
          >
            $0.00
          </div>
        </div>
      </Component>
      <Component
        cap={
          Object {
            "ETH": 20,
          }
        }
        data={
          Object {
            "ADA": 11.609008590666358,
            "BCH": 0.007558669061380139,
            "BTC": 0.00750053228379006,
            "DASH": 0.0034625156131839,
            "EOS": 0.2208225112777211,
            "ETC": 0.04403520558230914,
            "ETH": 0.04307733540298107,
            "HSR": 0.01925753932664638,
            "LSK": 0.051347106439531234,
            "LTC": 0.024265747042433658,
            "MIOTA": 1.2532610657778096,
            "NEO": 0.02912821789038175,
          }
        }
        key="1"
        prices={
          Array [
            Object {
              "BTC": 7700,
            },
            Object {
              "ETH": 330,
            },
            Object {
              "ETC": 66,
            },
          ]
        }
      >
        <div
          className="markets-percent-list-row"
        >
          <div
            className="markets-percent-list-row-symbol"
          >
            ETH
             - 
            20
            %
          </div>
          <div
            className="markets-percent-list-coin-value"
          >
            0.04307734
          </div>
          <div
            className="markets-percent-list-row-value"
          >
            $0.00
          </div>
        </div>
      </Component>
      <Component
        cap={
          Object {
            "ETC": 12.12,
          }
        }
        data={
          Object {
            "ADA": 11.609008590666358,
            "BCH": 0.007558669061380139,
            "BTC": 0.00750053228379006,
            "DASH": 0.0034625156131839,
            "EOS": 0.2208225112777211,
            "ETC": 0.04403520558230914,
            "ETH": 0.04307733540298107,
            "HSR": 0.01925753932664638,
            "LSK": 0.051347106439531234,
            "LTC": 0.024265747042433658,
            "MIOTA": 1.2532610657778096,
            "NEO": 0.02912821789038175,
          }
        }
        key="2"
        prices={
          Array [
            Object {
              "BTC": 7700,
            },
            Object {
              "ETH": 330,
            },
            Object {
              "ETC": 66,
            },
          ]
        }
      >
        <div
          className="markets-percent-list-row"
        >
          <div
            className="markets-percent-list-row-symbol"
          >
            ETC
             - 
            12.12
            %
          </div>
          <div
            className="markets-percent-list-coin-value"
          >
            0.04403521
          </div>
          <div
            className="markets-percent-list-row-value"
          >
            $0.00
          </div>
        </div>
      </Component>
    </div>
    <div
      className="markets-percent-list-control"
    >
      <Button
        as="button"
        basic={true}
        color="red"
      >
        <button
          className="ui red basic button"
          onClick={[Function]}
          role="button"
        >
          Reset
        </button>
      </Button>
      <Button
        as="button"
        color="green"
        onClick={[Function]}
      >
        <button
          className="ui green button"
          onClick={[Function]}
          role="button"
        >
          Confirm balanced investing schema
        </button>
      </Button>
    </div>
  </div>
</Component>
`;
